--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,7 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+framework = arduino
+lib_deps = 
+    ArduinoBLE
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
-framework = arduino
+
+[env:esp32c3]
+platform = espressif32
+board = esp32-c3-devkitm-1
+upload_speed = 921600
